--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@nuxtjs/axios": "^5.3.1",
     "@nuxtjs/vuetify": "^0.4.2",
     "basscss": "^8.0.4",
+    "chart.js": "^2.7.2",
     "nuxt": "^1.0.0",
     "v-charts": "^1.17.9"
   },
